--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-    "editor.formatOnSave": true,
-    "cSpell.language": "en,pt,pt-BR",
-    "cSpell.words": []
-  }
+  "editor.formatOnSave": true,
+  "cSpell.language": "en,pt,pt-BR",
+  "cSpell.words": [
+    "prometheus"
+  ]
+}
